# CRUD-final-2024

./: .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build.yaml  test.yaml
alembic/: env.py
alembic/versions/: 0509c668c05a_initial.py  21c2193af41c_add_date_and_time.py  3d506c6ad88b_add_date_and_time_2.py  959921590da1_update_configuration.py
lambda/update_image/: lambda_function.py
src/: config.py  main.py
src/auth/: __init__.py  auth.py  dao.py  dependencies.py  dto.py  models.py  utils.py
src/data/: crud.py  database.py  models.py  schemas.py  types.py
src/document/: __init__.py  dao.py  dependencies.py  dto.py  endpoint.py  endpoints.py  model.py  models.py
src/logo/: dao.py  endpoint.py  endpoints.py
src/permission/: dao.py  dependencies.py  models.py
src/project/: __init__.py  dao.py  dependencies.py  dto.py  endpoint.py  endpoints.py  model.py  models.py
src/routes/: auth.py  dependencies.py  documents.py  projects.py  users.py
src/services/: file_service.py  image_service.py
src/services/aws/: file_service.py
src/services/local/: file_service.py
src/shared/: config.py  database.py  dto.py  logs.py  models.py
src/user/: __init__.py  dao.py  dependencies.py  dto.py  endpoint.py  endpoints.py  models.py
src/utils/: logs.py  renders.py
tests/: conftest.py  test_document.py  test_health.py  test_hello_world.py  test_logo.py  test_project.py  test_users.py
